syntax = "proto3";

package comm;
option java_package = "com.inso.tuwien.binocular.comm";
option go_package = "github.com/INSO-TUWien/Binocular/services/grpc/com/go/comm";

message RegistrationRequest {
  string token = 1;
}

message RegistrationResponse {
  string signature = 1;
}

message UnregisterRequest {
  string signature = 1;
}

message UnregisterResponse {
}
